--- a/index.html
+++ b/index.html
@@ -14,5 +14,18 @@
     <p id="test01">This is the female form,
         A divine nimbus exhales from it from head to foot,
         It attracts with fierce undeniable attraction</p>
+        <p>Windows 11 Code: 4WNGP-7MHPP-CBVYB-W9M6H-JQKTT</p>
+    <p>Idea for main image: a "glow" effect around the dancer. Think of the glow in that game your wife plays... wtf is the name</p>
+    <h2>Aerodbic Workout without Lower Body</h2>
+    <ol>
+        <li>Push ups</li>
+        <li>Overhead Presses</li>
+        <li>Bent over rows</li>
+        <li>Bicep Curls</li>
+        <li>Forward Raises</li>
+        <li>Dips</li>
+        <li>Reverse Fly</li>
+        <li>Lateral Raises</li>
+    </ol>
 </body>
 </html>
