--- a/index.html
+++ b/index.html
@@ -10,6 +10,50 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
+    <nav>
+        <ul class="main-menu">
+            <li class="main-menu-item">
+                <a href="">Book Now</a>
+            </li>
+            <li class="main-menu-item">
+                <a href="">Our Team</a>
+            </li>
+            <li class="main-menu-item">
+                <a href="">Schedule</a>
+            </li>
+            <li class="main-menu-item">
+                <a href="">The Studio</a>
+            </li>
+            <li class="main-menu-item">
+                <a href="">Our Programs</a>
+                <ul class="sub-menu">
+                    <li class="sub-menu-item">
+                        <a href="">Pole Fitness</a>
+                    </li>
+                    <li class="sub-menu-item">
+                        <a href="">Erotic Dance</a>
+                    </li>
+                    <li class="sub-menu-item">
+                        <a href="">Personal Training</a>
+                    </li>
+                </ul>
+            </li>
+            <li class="main-menu-item">
+                <a href="">Store</a>
+            </li>
+            <li class="main-menu-item">
+                <a href="">About Us</a>
+                <ul class="sub-menu">
+                    <li class="sub-menu-item">
+                        <a href="">Careers</a>
+                    </li>
+                    <li class="sub-menu-item">
+                        <a href="">Privacy Policy</a>
+                    </li>
+                </ul>
+            </li>
+        </ul>
+    </nav>
     <h1>Body Electric</h1>
     <p id="test01">This is the female form,
         A divine nimbus exhales from it from head to foot,
